noinst_LTLIBRARIES = libmsactions.la

libmsactions_la_SOURCES = \
Command_SaveTLSState.cpp Command_SaveTLSState.h \
Command_SaveTLSSwitches.cpp Command_SaveTLSSwitches.h \
Command_SaveTLSSwitchStates.cpp Command_SaveTLSSwitchStates.h \
Command_SaveTLCoupledLaneDet.cpp Command_SaveTLCoupledLaneDet.h \
Command_SaveTLCoupledDet.cpp Command_SaveTLCoupledDet.h
