noinst_LTLIBRARIES = libemissions.la

libemissions_la_SOURCES = HelpersHarmonoise.cpp HelpersHarmonoise.h \
HelpersHBEFA.cpp HelpersHBEFA.h \
HelpersHBEFA3.cpp HelpersHBEFA3.h \
HelpersPHEMlight.cpp HelpersPHEMlight.h \
PHEMCEP.h PHEMCEP.cpp PHEMCEPHandler.h PHEMCEPHandler.cpp PHEMConstants.h \
PollutantsInterface.h PollutantsInterface.cpp
