noinst_LTLIBRARIES = libguiutilsWindows.la

libguiutilsWindows_la_SOURCES = \
GUIAppEnum.h \
GUIDanielPerspectiveChanger.cpp GUIDanielPerspectiveChanger.h \
GUIDialog_EditViewport.cpp GUIDialog_EditViewport.h \
GUIDialog_ViewSettings.cpp GUIDialog_ViewSettings.h \
GUIGlChildWindow.cpp GUIGlChildWindow.h \
GUIMainWindow.cpp GUIMainWindow.h \
GUIPerspectiveChanger.cpp GUIPerspectiveChanger.h \
GUISUMOAbstractView.cpp GUISUMOAbstractView.h \
GUIDialog_GLObjChooser.cpp GUIDialog_GLObjChooser.h

